fix overlapping bevels

--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -7,7 +7,7 @@ footer {
 	justify-content: space-between;
 	align-items: center;
 	color: var(--site-reverse-body-text-col);
-	background-image: linear-gradient(to bottom, #999, #666);
+	background-image: linear-gradient(to bottom, #444, #333);
 	border-top-left-radius: var(--elements-radius-small);
 	border-bottom-right-radius: var(--elements-radius-small);
 	// filter: grayscale(1);
